Switched to memory mapped files