@@ -16,5 +16,5 @@
 #
 
 
-JAVA_OPTS="-XX:+UseZGC"
+JAVA_OPTS="-Xms16G -Xmx16G"
 time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_fatroom
